<resources translatable="false">
    <string name="app_name">NasaMaterialDesign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture_of_the_day_stub">Picture of the day</string>
    <string name="dialog_button_reload_text">Reload</string>
    <string name="dialog_button_cancel_text">Cancel</string>
    <string name="message_url_empty_text">Link is empty</string>
    <string name="title_url_empty_text">Picture error</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поиск термина в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="imageDesc">Картинка</string>
    <string name="to_the_screen_1_text">На экран c ViewPager</string>
    <string name="to_the_screen_2_text">На экран c BottomNavigationView</string>
    <string name="today_chip">Сегодня</string>
    <string name="yesterday_chip">Вчера</string>
    <string name="before_yesterday_chip">Позавчера</string>
    <string name="settings_title_label">Настройки</string>
    <string name="cosmic_theme_chip">Космическая</string>
    <string name="moon_theme_chip">Лунная</string>
    <string name="mars_theme_chip">Марсианская</string>
    <string name="theme_label">Тема:</string>
    <string name="epic_title_text">EPIC</string>
    <string name="epic_coordinates">Coordinates:</string>
    <string name="description_title_text">Description</string>
    <string name="description_text">The EPIC provides information on the daily imagery collected by DSCOVR\'s Earth Polychromatic Imaging Camera (EPIC) instrument. Uniquely positioned at the Earth-Sun Lagrange point, EPIC provides full disc imagery of the Earth and captures unique perspectives of certain astronomical events such as lunar transits using a 2048x2048 pixel CCD (Charge Coupled Device) detector coupled to a 30-cm aperture Cassegrain telescope.</string>
    <string name="mars_fragment_description_text">This API is designed to collect image data gathered by NASA\'s Curiosity, Opportunity, and Spirit rovers on Mars and make it more easily available to other developers, educators, and citizen scientists. This API is maintained by Chris Cerami. Each rover has its own set of photos stored in the database, which can be queried separately. There are several possible queries that can be made against the API. Photos are organized by the sol (Martian rotation or day) on which they were taken, counting up from the rover\'s landing date. A photo taken on Curiosity\'s 1000th Martian sol exploring Mars, for example, will have a sol attribute of 1000. If instead you prefer to search by the Earth date on which a photo was taken, you can do that, too. Along with querying by date, results can also be filtered by the camera with which it was taken and responses will be limited to 25 photos per call. Queries that should return more than 25 photos will be split onto several pages, which can be accessed by adding a \'page\' param to the query. Each camera has a unique function and perspective</string>
    <string name="mars_rover_photos">Mars Rover Photos</string>
    <string name="show_picture_text">Показать фото дня</string>
    <string name="to_the_screen_3_text">На экран со списком</string>
    <string name="recycler_item_time_text">Время: </string>
    <string name="rv_item_cleaning_text">Уборка</string>
    <string name="rv_item_learning_text">Обучение</string>
    <string name="rv_item_rest_text">Отдых</string>
    <string name="header">Список дел</string>
    <string name="rv_activity_description_text">Мы будем изучать материальный дизайн. Материал — это адаптируемая система руководств, компонентов и инструментов, поддерживающая лучшие практики проектирования пользовательского интерфейса. Благодаря открытому исходному коду Material упрощает сотрудничество между дизайнерами и разработчиками и помогает командам быстро создавать красивые продукты.</string>
    <string name="search_in_recycler_list">Search</string>
    <string name="nothing_find_text">По вашему запросу ничего не найдено</string>
</resources>